# emplaiyed

./: .env.template  .gitignore  README.md  SPEC.md  UX_HAPPY_PATH.md  pyproject.toml  requirements-questions.md
.opencode/plans/: asset-quality-improvement.md  contact-extraction-followup.md
docs/: WORKSTREAMS.md
docs/research/: w1_agentic_search.md  w2_sources.md  w3_asset_quality.md  w6_email_monitoring.md
src/emplaiyed/: __init__.py  main.py
tests/: conftest.py  test_happy_path.py
tests/test_cli/: test_funnel_cmd.py  test_main.py  test_profile_cmd.py  test_reset_cmd.py  test_schedule_cmd.py  test_sources_scan_integration.py  test_work_cmd.py
tests/test_console/: test_app.py  test_chat_modal.py  test_funnel_stats.py  test_modals.py  test_search_modal.py
tests/test_contacts/: test_api.py  test_extractor.py  test_followup_drafter.py
tests/test_core/: test_database.py  test_models.py  test_profile_store.py
tests/test_followup/: test_agent.py
tests/test_generation/: test_chat_assistant.py  test_config.py  test_cv_generator.py  test_letter_generator.py  test_pipeline.py
tests/test_inbox/: test_classifier.py  test_config.py  test_matcher.py  test_monitor.py  test_notifier.py
tests/test_llm/: test_engine.py  test_engine_integration.py
tests/test_negotiation/: test_advisor.py
tests/test_outreach/: test_drafter.py
tests/test_prep/: test_agent.py
tests/test_profile/: test_builder.py  test_cv_parser.py  test_enricher.py  test_gap_analyzer.py  test_market_advisor.py  test_profile_build_cmd.py  test_quality_analyzer.py
tests/test_rendering/: test_docx_renderer.py  test_html_renderer.py  test_markdown_renderer.py  test_pdf_renderer.py
tests/test_scoring/: test_scorer.py
tests/test_sources/: test_base.py  test_emploi_quebec.py  test_guichet_emplois.py  test_indeed.py  test_jobbank.py  test_jobillico.py  test_manual.py  (+4 more)
(+120 files in other folders)
