[project]
name = "emplaiyed"
version = "0.1.0"
description = "AI-powered job seeking toolkit"
readme = "README.md"
authors = [
    { name = "Jonathan Pelletier", email = "jonathanp@untestament.ca" }
]
requires-python = ">=3.12"
dependencies = [
    "pydantic>=2.0",
    "pyyaml>=6.0",
    "typer>=0.15",
    "rich>=13.0",
    "pydantic-ai>=1.58.0",
    "httpx>=0.28.1",
    "beautifulsoup4>=4.14.3",
    "pdfminer.six>=20231228",
    "python-dotenv>=1.2.1",
    "fpdf2>=2.8",
    "textual>=3.0",
]

[project.scripts]
emplaiyed = "emplaiyed.main:app"

[build-system]
requires = ["uv_build>=0.9.27,<0.10.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
